--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.1.8",
+    "maplibre-gl": "5.5.0",
+    "ol": "10.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "4.1.8"
