--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "4.1.8",
+    "autoprefixer": "10.4.21",
+    "axios": "1.9.0",
+    "leaflet": "1.9.4",
     "maplibre-gl": "5.5.0",
     "ol": "10.5.0",
+    "postcss": "8.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "5.0.0",
     "tailwindcss": "4.1.8"
   },
   "devDependencies": {
