--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "autoprefixer": "10.4.21",
     "axios": "1.9.0",
     "chart.js": "4.4.9",
+    "chartjs-adapter-date-fns": "3.0.0",
     "chartjs-plugin-datalabels": "2.2.0",
     "date-fns": "4.1.0",
     "framer-motion": "12.15.0",
     "leaflet": "1.9.4",
+    "leaflet-draw": "1.0.4",
     "lucide-react": "0.511.0",
     "maplibre-gl": "5.5.0",
     "ol": "10.5.0",
@@ -32,6 +34,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "5.5.0",
     "react-leaflet": "5.0.0",
+    "react-leaflet-draw": "0.20.6",
     "react-router-dom": "7.6.1",
     "react-toastify": "11.0.5",
     "recharts": "2.15.3",
