--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,9 @@
     "framer-motion": "12.15.0",
     "leaflet": "1.9.4",
     "leaflet-draw": "1.0.4",
+    "leaflet-freedraw": "2.15.0",
+    "leaflet-freehandshapes": "0.3.11",
+    "leaflet.pm": "2.2.0",
     "lucide-react": "0.511.0",
     "maplibre-gl": "5.5.0",
     "ol": "10.5.0",
